# conversion_precis_ipp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  artifact.tar  pyproject.toml
.github/workflows/: render-quarto.yml
docs/: README.md
quarto/: __init__.py  check_workflow.sh
quarto/fiscalite/: .gitignore  README.md  _quarto.yml  check_workflow.sh  cotisations.qmd  cover-back.tex  cover-pages.tex  fiscalite-references.csl  glossaire.qmd  index.qmd  indirecte.qmd  legislation.bib  openfisca_tables.py  openfisca_tables_core.py  patrimoine.qmd  presentation.qmd  references.bib  requirements-quarto.txt  revenu.qmd  serve.sh
quarto/fiscalite/chapters/: __init__.py
quarto/fiscalite/docs/: citations.md  tableaux-openfisca-candidats.md
quarto/fiscalite/parameters/: README.md
quarto/fiscalite/tables/: tva_historique_static.md
quarto/openfisca_tables/: __init__.py  core.py
quarto/tex2qmd/: README.md  __init__.py  convert.py  fiscalite.py  legislation.py
source/Chomage/: Précis IPP - Chômage.tex
source/Fiscalité/: Guide IPP - fiscalite.tex  Guide IPP - fiscalite.tex.bak  biblio-guide.bib  biblio-guide.bib.bak
source/Marché du travail/: Chapitre2.tex  Template_Precis_IPP2.tex
source/Prestations/: Guide IPP-Prestations.tex  Guide IPP-Prestations.tex.bak
source/Prestations - New template/: Guide_prestation_new.tex  Guide_prestation_new.tex.bak
source/Retraites/: Guide_IPP_Retraites_v2.tex  Guide_IPP_Retraites_v2.tex.bak  TO DO.txt
source/Template Precis IPP (new)/: Template_Precis_IPP.tex  Template_Precis_IPP.tex.bak
(+227 files in other folders)
